--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
 		"setup": "sass --load-path=node_modules src/styles.scss static/styles.css",
 		"watch": "npm run setup -- --watch"
 	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"remark-math": "^3.0.0",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"svelte-copy": "^1.4.2",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
-	},
 	"type": "module",
-	"dependencies": {
-		"bulma": "^1.0.3",
-		"chart.js": "^4.4.3",
-		"mdsvex": "^0.11.0",
-		"node-sass": "^9.0.0",
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/adapter-static": "^3.0.10",
+		"@sveltejs/kit": "^2.47.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"katex": "^0.16.25",
+		"mdsvex": "^0.12.6",
 		"rehype-katex-svelte": "^1.2.0",
-		"svelte-chartjs": "^3.1.5",
-		"sass": "^1.83.4"
+		"remark-math": "^3.0.0",
+		"svelte": "^5.41.0",
+		"svelte-check": "^4.3.3",
+		"svelte-copy": "^2.0.0",
+		"tslib": "^2.8.1",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.10"
+	},
+	"dependencies": {
+		"bulma": "^1.0.4",
+		"d3-dsv": "^3.0.1",
+		"plotly.js-dist-min": "^3.1.2",
+		"sass": "^1.93.2"
 	}
 }
