--- a/src/content/papers/bilinear.toml
+++ b/src/content/papers/bilinear.toml
@@ -2,7 +2,7 @@ title = "Bilinear MLPs enable weight-based mechanistic interpretability"
 date = "2024-10-01"
 conference = "ICLR'25"
 labels = ["spotlight"]
-description = "Using bilinear MLPs to reverse-engineer image and language models from their weights."
+description = "Using bilinear MLPs to reverse-engineer image and language models from their weights"
 link = "/research/bilinear"
 authors = ["Michael T. Pearce*", "Thomas Dooms*", "Alice Rigg", "Jose M. Oramas", "Lee Sharkey"]
 
