--- a/src/content/papers/tokenized.toml
+++ b/src/content/papers/tokenized.toml
@@ -1,8 +1,8 @@
-title = "Tokenized SAEs: Disentangling SAE Reconstructions"
+title = "Tokenized SAEs: disentangling SAE reconstructions"
 date = "2024-06-01"
 conference = "ICML'24"
 labels = ["workshop"]
-description = "Using a per-token bias in SAEs to separate token reconstructions from interesting features."
+description = "Using a per-token bias in SAEs to separate token reconstructions from interesting features"
 link = "/research/tokenized"
 authors = ["Thomas Dooms*", "Daniel Wilhelm*"]
 
