--- a/src/content/presentations/diffusion.toml
+++ b/src/content/presentations/diffusion.toml
@@ -1,6 +1,6 @@
-title = "Diffusion Models"
+title = "Diffusion models"
 date = "2023-01-01"
 conference = "University lecture"
-description = "A brief overview of diffusion models and the current SOTA."
+description = "A brief overview of diffusion models and the current SOTA"
 link = "https://docs.google.com/presentation/d/1s0gPSXldiHgu4AYji_ELhoDTNNluNiKgq8Ry_t3cJM0/edit?usp=sharing"
 external = true
