--- a/src/content/presentations/embodied-llms.toml
+++ b/src/content/presentations/embodied-llms.toml
@@ -1,6 +1,6 @@
-title = "Embodied Language Models"
+title = "Embodied language models"
 date = "2023-06-01"
 conference = "University lecture"
-description = "A presentation on the integration of LLMs into robotics."
+description = "A presentation on the integration of LLMs into robotics"
 link = "https://docs.google.com/presentation/d/1oURN_cmpF-GYLYVCDLU7teZ2RL_I5oeMH8onfU7ffNM/edit?usp=sharing"
 external = true
