--- a/src/content/presentations/weight-based.toml
+++ b/src/content/presentations/weight-based.toml
@@ -1,6 +1,6 @@
 title = "Weight-based interpretability"
 date = "2024-10-01"
 conference = "Flanders AI Day"
-description = "A quick primer on weight-based interpretability."
+description = "A quick primer on weight-based interpretability"
 link = "https://docs.google.com/presentation/d/1PdcHm0bgwIu3yhy6oWkwL1-fDGTPzTiyUilydognLlw/edit?usp=sharing"
 external = true
