--- a/src/content/demos/eigenvectors.toml
+++ b/src/content/demos/eigenvectors.toml
@@ -1,5 +1,5 @@
 title = "Eigenvectors"
-sub = "Full model weight decomposition into eigenvectors."
+sub = "Full model weight decomposition into eigenvectors"
 url = "/demos/eigenvectors"
 image = "@/assets/thumbnails/eigenvectors.png"
 square = true
