--- a/src/content/demos/manifolds.toml
+++ b/src/content/demos/manifolds.toml
@@ -1,5 +1,5 @@
 title = "Manifolds"
-sub = "Linear projections of latent activations found by bilinear autoencoders."
+sub = "Linear projections of latent activations found by bilinear autoencoders"
 url = "/demos/manifolds"
 image = "@/assets/thumbnails/manifolds.svg"
 square = true
